--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,22 @@
-
 {
-    "env": {
-        "browser": true,
-        "es2020": true
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 11,
-        "sourceType": "module"
-    },
-    "extends": [
-        "plugin:prettier/recommended"
-      ],
-    "plugins": ["prettier"],
-    "rules": {
-        "no-console": 0, 
-        "quotes": ["error", "single"],
-        "import/extensions": ["error", "never"], 
-            "prettier/prettier": "error",
-            "react/jsx-filename-extension": [
-          "warn", { "extensions": [".jsx", ".js"] }
-        ],
-      }
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  },
+  "extends": ["plugin:prettier/recommended"],
+  "plugins": ["prettier"],
+  "rules": {
+    "no-console": 0,
+    "quotes": ["error", "single"],
+    "prettier/prettier": "error",
+    "react/jsx-filename-extension": ["warn", { "extensions": [".jsx", ".js"] }],
+    "import/extensions": [".js", ".jsx"]
+  }
 }
