--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "history": "^5.0.0",
     "prettier": "^2.1.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3"
@@ -45,13 +45,17 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "jest-environment-jsdom": "^26.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "babel-jest": "^26.6.3",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "babel-jest": "^24.9.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
